# normalization_equivariant_nn

./: README.md  dataloader.py  demo_jupyter_notebook.ipynb  demo_training.py  drunet.py  evaluator.py  fdncnn.py  setup.cfg  trainer.py
models/: basicblock.py  basicblocks.py  dncnn.py  drunet.py  drunet_NI.py  fdncnn.py  fdncnn_NI.py
test/dataloader/: test_dataloader.py  test_dataloader_large_trainset.py
test/evaluator/: test_evaluator.py
test/trainer/: test_trainer.py
utilities/: utilities.py
