[metadata]
name = normalization_equivariant_nn
version = 0.0.1
author = Sebastien Herbreteau
author_email = sebastien.herbreteau@inria.fr
license = GNU AFFERO GENERAL PUBLIC LICENSE
url = https://github.com/sherbret/normalization_equivariant_nn/
description = Image denoising
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: GNU AFFERO GENERAL PUBLIC LICENSE
project_urls =
    Bug Tracker = https://github.com/sherbret/normalization_equivariant_nn/issues
    Documentation = https://github.com/sherbret/normalization_equivariant_nn#README.md
    Source Code = https://github.com/sherbret/normalization_equivariant_nn/
    User Support = https://github.com/sherbret/normalization_equivariant_nn/issues

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires = 
	torchvision==0.15.1
	numpy>=1.24.2
	pillow>=9.5.0
	matplotlib>=3.7.1
